# GarbageCollector

./: .gitignore  Api.cpp  Api.h  Aux.h  CMakeCache.txt  CMakeLists.txt  Cacher.cpp  Cacher.h  Config.cpp  Config.h  LegacyDependencyAnalyzer.cpp  LegacyDependencyAnalyzer.h  Makefile  MongoHandler.cpp  MongoHandler.h  PatchMaker.cpp  PatchMaker.h  PostgreHandler.cpp  PostgreHandler.h  README.md  RpmHandler.cpp  RpmHandler.h  SpecCollector.cpp  SpecCollector.h  SpecParser.cpp  SpecParser.h  WDS.cpp  WDS.h  boost.spec  cmake_install.cmake  main.cpp  out.txt  rpmDB_test.cpp  rpmDB_test.h  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml
DB/: docker-compose.yaml  dump.csv  dump2.csv  main.py  makefile  name_data.csv
